# alexsmail-dns-fix

./: .dockerinfo  .gitattributes  .gitignore  CHANGELOG.md  Dockerfile  Dockerfile.bak  README.md  docker-compose.yml  mise.toml  pyproject.toml
.devcontainer/: devcontainer.json
docs/: NETSKOPE_DPI_BYPASS.md  PUBLISHING_PIPELINE.md
src/alexsmail_dns_fix/: dns_fix.py
