# [DEPENDENCY_GRAPH_ALLOCATION]: alexsmail-dns-fix
# Strict PEP 621 compliance for target environment

[project]
name = "alexsmail-dns-fix"
dynamic =["version"]
description = "DNS Resolution and Fix Runtime"
requires-python = ">=3.13.3"

# [EXTERNAL_DEPENDENCIES]: Authorized nodes for Google IO
dependencies =[
    "google-api-python-client>=2.194.0, <3.0.0",
    "google-auth-httplib2>=0.3.1, <0.4.0",
    "google-auth-oauthlib>=1.3.1, <2.0.0"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# [POINTER_ALLOCATION]: Directing the transpiler to the isolated OR
[tool.hatch.build.targets.wheel]
packages =["src/alexsmail_dns_fix"]

[tool.hatch.version]
path = "src/alexsmail_dns_fix/__init__.py"